fixed home page on mobile

--- a/client/src/components/Home1/Home1.scss
+++ b/client/src/components/Home1/Home1.scss
@@ -38,6 +38,9 @@
         display: flex;
         justify-content: flex-end;
         width: 100%;
+        .subHead{
+          display: none;
+        }
         .head {
           text-align: end;
           color: #333;
@@ -256,7 +259,7 @@
         justify-content: center;
         position: static;
         width: 100%;
-        height: 180px;
+        height: 183px;
         padding-right: 0;
         .headDiv {
           display: flex;
@@ -264,6 +267,7 @@
           justify-content: center;
           flex-direction: column;
           .subHead{
+            display: inline-block;
             color: #333;
             font-size: 1.5rem;
             text-align: center;
@@ -274,7 +278,7 @@
             font-size: 2.5rem;
             text-align: center;
             align-self: center;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
 
             &:before{
               content: '';
@@ -283,16 +287,14 @@
         }
       }
       .rightSect {
-       width: 100%;
+        width: 100%;
         left: 0;
-        padding-bottom: 50px;
-        // padding-top: 50px;
         .rightSectChild {
           display: flex;
           flex-direction: column;
           align-self: center;
           align-items: center;
-          justify-content: center;
+          justify-content: flex-start;
           .imgDiv{
             margin-bottom: 50px;
             img{}
